2015-02-23 Roman
- FIX:SYS: Debian's init script fixed by remove force LC_ALL set and that break down individual LC_NUMERIC=C setting
    for different to C,POSIX or English locales.


2015-02-22 Roman
- DB: LibsDB.OscadaLibs.db: User protocols and the data templates some make unified for: SCU750, TMH, TM510x, SMS, DCON.
- DB: ModelsDB.AGLKS.St.db: User protocols DCON and TM510x moved to LibsDB.OscadaLibs.db.


2015-02-21 Roman
- Transport.Sockets: Help message to input protocol selection about the empty value is added.
- FIX:UI.VCAEngine: Link to widget's attribute from the wiget by "wdg:a_XXX" fixed.


2015-02-20 Roman
- DAQ.Fastwell: Addition headers included to distribution.
- FIX:DAQ.Siemens: Into Libnodave file nodave.h #pragma pack(1) is replaced to #pragma pack(push,1) ... #pragma pack(pop).
- FIX:DAQ.Siemens,Special.SystemTests: Integer type expanded next to int64_t.
- UI.{VCAEngine,Vision}: Some warnings added for try add already present items and paste, after copy or cut, to already present item.
- Transport.Sockets: Checking for activity for initiative mode moved to the input protocol function check()
    and unsuccess checking for lost TCP connection tried.


2015-02-19 Roman
- DAQ.OPC_UA: Debug error messages for input requests fixed. Sequence number is added to "MSG Req:" messages for sync allow.
- DAQ.Siemens: LibnoDave version updated to 0.8.5 (last from 05/17/13).


2015-02-18 fido_max
- New module DAQ.Fastwell implement for Fastwell IO FBUS client implementation.


2015-02-17 Roman
- FIX:DAQ.OPC_UA.libOPC_UA: TranslateBrowsePathsToNodeIdsRequest service fixed for processing no OK paths.
- DAQ.OPC_UA: Limit limRetrQueueTm() for retransmission queue time control. For all limits control tab "Data" with limits is added.
- FIX:UI.Vision: Remote projects and sessions list obtain fixed to proper users for started user's field.
    Scale margin for runtime session decreased from 5% to 2%.


2015-02-12 Roman
- !!!!:SYS: