@@ -522,7 +522,7 @@ void ModVArch::cntrCmdProc( XMLNode *opt )
 //*************************************************
 //* FSArch::ModVArchEl - Value archive element    *
 //*************************************************
-ModVArchEl::ModVArchEl( TVArchive &iachive, TVArchivator &iarchivator ) : mChecked(false), TVArchEl(iachive,iarchivator), realEnd(0)
+ModVArchEl::ModVArchEl( TVArchive &iachive, TVArchivator &iarchivator ) : TVArchEl(iachive,iarchivator), mChecked(false), realEnd(0)
 {
 
 }
